--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
     <!-------------- Footer ---------->
     <footer class="footer">
-        <span class="footer-text">&copy; 2021 | All Rights Reserved |</span>
+        <span class="footer-text textfirst">&copy; 2021 | All Rights Reserved |</span>
         <span class="footer-text">Developed with
             <svg class="footer-svg" width="14" height="13" viewbox="0 0 14 13" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
